--- a/src/backend/package.xml
+++ b/src/backend/package.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>robot_interface</name>
+  <name>backend</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-<maintainer email="1147656044@qq.com">x</maintainer>
+  <maintainer email="1147656044@qq.com">x</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-<depend>rclpy</depend>
-<depend>geometry_msgs</depend>
-<depend>pygame</depend>
-<depend>nav_msgs</depend>
-<depend>functools</depend>
-<depend>utils</depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
