--- a/src/cbs_ros2_msgs/package.xml
+++ b/src/cbs_ros2_msgs/package.xml
@@ -4,7 +4,7 @@
   <name>cbs_ros2_msgs</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="xufz@qq.com">x</maintainer>
+<maintainer email="1147656044@qq.com">x</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
